Checkbox alignment when giving line-height to parent solved

--- a/src/Checkbox/Checkbox.less
+++ b/src/Checkbox/Checkbox.less
@@ -3,6 +3,8 @@
 .wrapper > label {
     display: flex;
     cursor: pointer;
+    justify-content: center;
+    align-items: center;
 }
 
 .wrapper > input
